fix color on mobile

--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -70,7 +70,7 @@
 
 .mobileMenuModal {
   position: fixed;
-  background-color: #3c83f3;
+  background-color: $primarylight;
   left: 0;
   top: 0;
   width: 100%;
